--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
-    "mongoose": "^6.1.2"
+    "handlebars": "^4.7.7",
+    "mongoose": "^6.1.2",
+    "nodemon": "^2.0.15"
   }
 }
